Added property images in a carousel in the main-body

--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,11 @@ nav .navbar-brand  img {
     height: 100%;
     width: auto;
 }
+#prop h5{
+    text-align: center;
+}
+
+#agents h5{
+    text-align: center;
+}
+
