--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,30 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Nunito', sans-serif;
+}
+
+ul, ol {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+a a:hover {
+    text-decoration: none;
+}
+
+.btn-action {
+    color: #ffffff;
+    background-color:  #5A2F2F;
+    border-radius: 5px;
+}
+.btn-action:hover {
+    background-color:  rgb(75, 36, 36);
+}
+.highlight {
+    background-color:  rgb(138, 96, 96);
+    border-radius: 5px;
 }
 
 nav .navbar-brand {
@@ -9,11 +34,55 @@ nav .navbar-brand  img {
     height: 100%;
     width: auto;
 }
-#prop h5{
-    text-align: center;
+.nav-item {
+    padding: 0 5px;
 }
 
-#agents h5{
-    text-align: center;
+section#banner {
+    background: url('./imgs/buy2\ 1.png') center no-repeat;
+    background-size: cover;
+    height: 80vh;
+    position: relative;
+}
+section#banner::after {
+    background: #00000099;
+    display: block;
+    content: "";
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+section #banner__content {
+    position: absolute;
+    top: 10vh;
+    z-index: 100;
+    width: 100%;
+    left: 0;
+}
+section #banner__content div.row h1 {
+    font-size: 3em
+}
+section #banner__content div.row form {
+    /* width: 60% */
+}
+section #banner__content div.row form * {
+    margin: 0;
+    padding: 0;
+    border-radius: 0;
+}
+section #banner__content div.row form *:focus {
+    border: none;
 }
 
+#search-field div.row:first-child *, #search-field div.row:last-child *{
+    height: 60px;
+}
+
+div#choice button {
+    background-color: rgba(255, 255, 255, 0.67) !important;
+}
+div#choice button:hover {
+    background-color: rgba(0, 0, 0, 0.55) !important;
+    color: #ffffff;
+}
