Worked on the index contents

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6312,7 +6312,7 @@ a.close.disabled {
   -ms-flex-pack: center;
   justify-content: center;
   width: 15%;
-  color: #fff;
+  color: #002752;
   text-align: center;
   opacity: 0.5;
   transition: opacity 0.15s ease;
@@ -6384,7 +6384,7 @@ a.close.disabled {
   margin-left: 3px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #002752;
   background-clip: padding-box;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
