--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,9 @@ ul, ol {
     margin: 0;
     padding: 0;
 }
-a a:hover {
+a, a:hover, a:active {
     text-decoration: none;
+    color: unset;
 }
 
 .btn-action {
@@ -43,6 +44,7 @@ section#banner {
     background-size: cover;
     height: 80vh;
     position: relative;
+    margin-bottom: 60px;
 }
 section#banner::after {
     background: #00000099;
@@ -85,4 +87,104 @@ div#choice button {
 div#choice button:hover {
     background-color: rgba(0, 0, 0, 0.55) !important;
     color: #ffffff;
+}
+
+.keys__container {
+    position: absolute;
+    bottom: -40px;
+    /* margin: auto; */
+    z-index: 100;
+    width: 100%;
+}
+.keys {
+    padding: 30px 10px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    box-shadow: #0a0311 0px 0px 7px;
+}
+.keys:hover {
+    background-color: #564256;
+    color: #ffffff;
+}
+
+/* footer */
+
+.box1{
+    /* margin: auto; */
+    text-align: center;
+    color: whitesmoke;
+    
+}
+#box1{
+    background-color: #564256;
+    padding-bottom: 20px;
+}
+#button{
+    background-color: #cf6a3d;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: white;
+    text-decoration-line: none;
+    border-radius: 5%;
+    border: 1px solid #564256; 
+      
+}
+#button:hover{
+    background-color: rgb(5, 5, 77);   
+}
+#become_agent{
+    font-size: xx-large;
+}
+#find_home_address{
+    font-size: xx-large;
+    
+}
+.h6_tag{
+    font-size: smaller;
+    font-weight: 600;
+}
+.li_tag{
+    list-style: none;
+    font-weight: 50;
+    font-size: 0.9em;
+}
+#box4{
+    min-height: 50vh;
+    background-color: #0a0311;
+}
+#agent{
+    font-size: 1.2em;
+    text-transform: uppercase;
+}
+.our_agents_logo{
+    opacity:0.5;
+    width: 50%;   
+}
+.footer_headings{
+    text-transform: uppercase;
+    font-weight: lighter;
+    opacity: 0.7;
+}
+/* #footer_line1{
+    border-bottom: 2px solid gray;
+}
+#footer_line2{
+    border-bottom: 2px solid white;
+    margin-top: 1px;
+} */
+#copyright{
+    border-radius:60%;
+    border: 1px solid white;
+    font-size: x-small;
+}
+#team{
+    font-size:0.6em;
+}
+
+@media only screen and (max-width:768px) {
+    .hidden {
+        display: none;
+    }
 }
