--- a/css/main.css
+++ b/css/main.css
@@ -505,5 +505,26 @@ div#choice button:hover {
     color: #ffffff;
     padding: 5px 15px;
     border-radius: 50px;
+}
+.houses4sale ul{
+    display: flex;
 
+}
+.houses4sale ul :nth-child(2){
+    margin-left: 5px;
+    margin-right: auto;
+
+}
+.houses4sale ul :nth-child(3){
+    margin-top: 3px;
+}
+.houses4sale ul :last-child button{
+    padding: 0px 20px;
+    border-radius: 3px;
+    background-color: #5a2f2f;
+    color: #ffffff;
+    margin-left: 20px;
+}
+.houses4sale a:active{
+    border-bottom: 2px #3a3939 solid;
 }
