--- a/css/for_sale.css
+++ b/css/for_sale.css
@@ -10,7 +10,7 @@ main {
     border-radius: 15px;
     box-shadow: #000000 3px 5px 7px; 
     background-color: rgb(143, 122, 94);
-    /* min-height: 150px; */
+    margin: 10px 0 10px 0;
 }
 .property div {
     border-radius: 15px;
