--- a/css/for_sale.css
+++ b/css/for_sale.css
@@ -7,19 +7,18 @@ main {
 }
 
 .property {
-    border-radius: 15px;
-    box-shadow: #000000 3px 5px 7px; 
-    background-color: rgb(143, 122, 94);
+    border-radius: 5px;
+    box-shadow: #cccccc 3px 5px 10px; 
     margin: 10px 0 10px 0;
 }
 .property div {
-    border-radius: 15px;
+    border-radius: 0 5px 5px 0;
 }
 .property-description {
     display: flex;
     flex-direction: column;
     background-color: #cccccc;
-    border-radius: 0 15px 15px 0;
+    /* border-radius: 0 5px 5px 0; */
     /* padding: 5px; */
 }
 .property-description div {
@@ -36,6 +35,6 @@ main {
 
 @media only screen and (max-width:468px) {
     .property-description {
-        border-radius: 0 0 15px 15px;   
+        border-radius: 0 0 5px 5px;   
     }
 }
